test/classes/deitz/inherit/test_inherit_error1.good
Error: Class hierarchy is cyclic (test_inherit_error1.chpl:1)
