test/classes/deitz/inherit/test_inherit_error1.chpl
class C : C {
  var x : int = 1;
}

var c : C = C();

writeln(c);
